MCA Dev/src/objects/Receivable__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Due__c</fullName>
        <formula>Amount__c - Receivable_Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Paid__c</fullName>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Amount_Used__c</fullName>
        <label>Deal Amount Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_From_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Due From Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Receivables</relationshipLabel>
        <relationshipName>Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FromReciToPayable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Identify that payable is automatically created from this Receivable.</description>
        <label>FromReciToPayable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCreatedFromGrid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The check-box will identify if receivables are created from Opportunity Grid and if so receivables wont be considered for auto creating parables.</description>
        <label>IsCreatedFromGrid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payback_Funded__c</fullName>
        <label>Percentage of</label>
        <picklist>
            <picklistValues>
                <fullName>Funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Funded Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inprogress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Receivable_Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Add Status of Receivable</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open - Ready to Pay</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TestMultiselectpicklist__c</fullName>
        <label>TestMultiselectpicklist</label>
        <picklist>
            <picklistValues>
                <fullName>abc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>xyz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pqr</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>TestPhoneField__c</fullName>
        <label>TestPhoneField</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Trial_del__c</fullName>
        <label>Trial</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bonus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing Residual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Origination Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syndication Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wizard_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Identify if Receivable has gone through wizard process</description>
        <label>Wizard Check</label>
        <type>Checkbox</type>
    </fields>
    <label>Receivable</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Receivable_Amount_Paid__c</columns>
        <columns>Date_Paid__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Due_From_Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Date_Sent__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Last_30_Days</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Due_From_Account__c</columns>
        <columns>Receivable_Amount_Paid__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid,Cancelled</value>
        </filters>
        <filters>
            <field>Date_Sent__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>Open_A_R</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Due_From_Account__c</columns>
        <columns>Receivable_Amount_Paid__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid,Cancelled</value>
        </filters>
        <label>Open A/R</label>
    </listViews>
    <nameField>
        <displayFormat>RCVB-{00000}</displayFormat>
        <label>Receivable Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receivables</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>ReceivableValidateAmountDue</fullName>
        <active>true</active>
        <errorConditionFormula>IF (AND(ISBLANK(TEXT( Payback_Funded__c )),ISNULL(Percentage__c)),FALSE,
IF(ISBLANK(TEXT( Payback_Funded__c )),
IF((Amount__c)!=0,TRUE,FALSE),
IF(ISNULL(Percentage__c),
IF((Amount__c)!=0,TRUE,FALSE),
IF( ROUND((Percentage__c * Deal_Amount_Used__c ), 2) !=  ROUND(Amount__c,2),TRUE,FALSE)
)
)
)</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>The Amount does not match the calculation of Percentage % and Percentage Of.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StatusCannotBePaid</fullName>
        <active>true</active>
        <description>Status cannot be Paid if the Amount Due not equal to 0.</description>
        <errorConditionFormula>ISPICKVAL( Status__c , &apos;Paid&apos;) &amp;&amp;  Amount_Due__c != 0</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status cannot be Paid if the Amount Due not equal to 0.</errorMessage>
    </validationRules>
</CustomObject>